create filter todos section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="select">
                 <select name="todos" class="filter-todo">
-                    <option value="All">All</option>
+                    <option value="All" id="filter-all-todos-elem" >All</option>
                     <option value="Completed">Completed</option>
                     <option value="Uncompleted">Uncompleted</option>
                 </select>
